--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -3,7 +3,7 @@
         <div class="container">
             <div class="columns is-centered">
                 <div class="column is-4">
-                    <div class="card" style="background-color: #9997a2;" >
+                    <div class="card" style="background-color: #9997a2;">
                         <header class="card-header">
                             <p class="card-header-title has-text-centered">
                                 Register
@@ -16,7 +16,8 @@
                                         <div class="field">
                                             <label class="label" for="username-reg">Username</label>
                                             <div class="control">
-                                                <input class="input" type="text" id="username-reg" name="username" required>
+                                                <input class="input" type="text" id="username-reg" name="username"
+                                                    required>
                                             </div>
                                         </div>
                                         <div class="field">
@@ -28,17 +29,19 @@
                                         <div class="field">
                                             <label class="label" for="password-reg">Password</label>
                                             <div class="control">
-                                                <input class="input" type="password" id="password-reg" name="password" required>
+                                                <input class="input" type="password" id="password-reg" name="password"
+                                                    required>
                                             </div>
                                         </div>
                                         <div class="field">
                                             <div class="control">
-                                                <button class="button is-primary is-rounded" type="submit">Submit</button>
+                                                <button class="button is-primary is-rounded"
+                                                    type="submit">Submit</button>
                                             </div>
                                         </div>
                                     </form>
                                     <div>
-                                    
+
                                     </div>
                                     <p style="color: white;">Or sign in using:</p>
                                     <button class="button is-info is-rounded rainbow-effect ">Google</button>
